Refactor CSS for consistency and readability

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 @font-face {
-  font-family: 'Figtree-med';
-  src: url(./assets/fonts/static/Figtree-Medium.ttf)  format('truetype');
+  font-family: "Figtree-med";
+  src: url(./assets/fonts/static/Figtree-Medium.ttf) format("truetype");
 }
 
 @font-face {
-  font-family: 'Figtree-xbold';
-  src: url(./assets/fonts/static/Figtree-ExtraBold.ttf)  format('truetype');
+  font-family: "Figtree-xbold";
+  src: url(./assets/fonts/static/Figtree-ExtraBold.ttf) format("truetype");
 }
 
 * {
@@ -15,20 +15,20 @@
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #F4d04e;
-    margin: 0px auto;
-    height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #f4d04e;
+  margin: 0px auto;
+  height: 100vh;
 }
 
 .card-component {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .card-content {
@@ -40,24 +40,27 @@ body {
   background-color: white;
   border-radius: 20px;
   border: 1px solid black;
-  box-shadow: 10px 10px 0px 1px rgba(0,0,0,1);  
+  box-shadow: 10px 10px 0px 1px rgba(0, 0, 0, 1);
   transition: all 0.5s ease;
 }
 
-.card-content:hover {  
-  box-shadow: 15px 15px 0px 5px rgba(0,0,0,1);
+.card-content:hover {
+  box-shadow: 15px 15px 0px 5px rgba(0, 0, 0, 1);
 }
 
 .card-content:hover .card-preset-1 {
-  color: #F4d04e;
+  color: #f4d04e;
 }
 
 .card-content img {
   width: 100%;
-  padding: 20px
+  padding: 20px;
 }
 
-.card-preset-3, .card-preset-1, .card-preset-2, .card-preset-3-bold {
+.card-preset-3,
+.card-preset-1,
+.card-preset-2,
+.card-preset-3-bold {
   align-self: flex-start;
   margin: 5px 20px;
 }
@@ -65,34 +68,34 @@ body {
 .card-preset-3-bold {
   width: 82px;
   height: 29px;
-  background-color: #F4d04e;
+  background-color: #f4d04e;
   border-radius: 4px;
   text-align: center;
   padding: 4px;
 }
 
 .card-preset-1 {
-  font-family: 'Figtree-xbold';
+  font-family: "Figtree-xbold";
   font-size: 24px;
   line-height: 150%;
   transition: all 0.5s ease;
 }
 
 .card-preset-2 {
-  font-family: 'Figtree-med';
+  font-family: "Figtree-med";
   font-size: 16px;
   line-height: 150%;
   color: #6b6b6b;
 }
 
 .card-preset-3 {
-  font-family: 'Figtree-med';
+  font-family: "Figtree-med";
   font-size: 14px;
   line-height: 150%;
 }
 
 .card-preset-3-bold {
-  font-family: 'Figtree-xbold';
+  font-family: "Figtree-xbold";
   font-size: 14px;
   line-height: 150%;
 }
@@ -110,7 +113,7 @@ body {
 }
 
 .card-creator span {
-  font-family: 'Figtree-med';
+  font-family: "Figtree-med";
   font-size: 14px;
   color: #6b6b6b;
 }
@@ -121,6 +124,7 @@ body {
   font-size: 11px;
   text-align: center;
 }
+
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
